--- a/stats.html
+++ b/stats.html
@@ -2638,7 +2638,7 @@ main {
     </script>
     <script>
       const chartParameters = {};
-      const data = {"version":1,"tree":{"name":"main.js","children":[{"name":"main.js","uid":"1ff5-0"}]},"nodes":{"1ff5-0":{"renderedLength":38,"isEntry":true,"id":""}},"links":[],"env":{"rollup":"2.10.9","rollup-plugin-visualizer":"4.0.4"},"options":{"gzip":false,"brotli":false}};
+      const data = {"version":1,"tree":{"name":"main.js","children":[{"name":"main.js","uid":"27f0-0"}]},"nodes":{"27f0-0":{"renderedLength":38,"isEntry":true,"id":""}},"links":[],"env":{"rollup":"2.10.9","rollup-plugin-visualizer":"4.0.4"},"options":{"gzip":false,"brotli":false}};
 
       document.addEventListener('DOMContentLoaded', () => {
         const width = chartParameters.width || window.innerWidth;
